restricciones(pd: soy karen)

--- a/asp_presentaciones/Pages/Shared/_Layout.cshtml
+++ b/asp_presentaciones/Pages/Shared/_Layout.cshtml
@@ -142,6 +142,8 @@
                                     <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Reservas">Reservas</a></li>
                                     <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Sedes_ServiciosExtras">Sedes_ServiciosExtras</a></li>
                                     <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/ServiciosExtras">ServiciosExtras</a></li>
+                                    <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Auditorias">Auditorias</a></li>
+
                                 }
                                 @if (rol == "Huesped")
                                 {
